--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Collaboration web app",
     "dependencies": {
         "express": "^4.16.4",
+        "requirejs": "^2.3.6",
         "socket.io": "^2.2.0"
     }
 }
